Fixed font sizings on mobile view

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -158,6 +158,7 @@ input{
 
 /* Hide extra texts and shrink glassmorphism box on mobile */
 @media (max-width: 600px) {
+    
     .container {
         min-height: 100vh;
         height: auto;
@@ -174,9 +175,7 @@ input{
         padding: 1rem 0.5rem;
         border-radius: 10px;
     }
-    .container {
-        padding: 1rem 0;
-    }
+    
     .right-side {
         width: 100vw;
         padding: 1rem 0.5rem;
@@ -194,10 +193,11 @@ input{
     }
     input, button {
         height: 2rem;
-        font-size: 1rem;
+        font-size: 0.8rem;
     }
     .divider {
         padding: 0 0.5rem;
         gap: 0.5rem;
     }
+    
 }
